--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href='//fonts.googleapis.com/css?family=Kreon:400,700' rel='stylesheet' type='text/css' />
     <link href='//fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css' />
     <link href="/img/favicon.png" rel="shortcut icon" type="image/png"/>
+    <link rel="me" href="https://cosocial.ca/@pl" />
   </head>
   <body>
     <div id="outerWrapper">
