--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href='//fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css' />
     <link href="/img/favicon.png" rel="shortcut icon" type="image/png"/>
     <link rel="me" href="https://cosocial.ca/@pl" />
+    <link rel="me" href="https://libre.fm/user/pluc" />
   </head>
   <body>
     <div id="outerWrapper">
